fix edge color options

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <label class="form-label">Edge colour:</label>
                 <select id="edgeColor" class="form-select form-select-sm" aria-label=".form-select-sm edge-color" oninput="updateEdgeColor(value);">
                     <option value="tag" selected>Tag</option>
-                    <option value="weight">Weight</option>
+                    <option value="weight">Co-occurrence</option>
                 </select>
             </div>
             <div class="filter-setting">
