--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
             }
             .content {
                 width: 60%;
-                padding: .5rem;
             }
             h3 {
                 text-decoration: underline;
+                padding-bottom: 2rem;
             }
             /* mobile styling */
-            @media (max-width: 767.98px) {
+            @media (max-width: 900px) {
                 .content-container {
                 margin-left: 2rem;
                 }
@@ -275,8 +275,9 @@
             <div class="content">
                 <div class="introduction">
                     <h3 id="introHeader">A Singapore AI Governance Concept Map</h3>
-                    <p>This semantic network maps out the core concepts that emerge from a content analysis of publications by the Singapore government on the topic of AI governance.</p>
-                    <p>A total of 448 publications were drawn from 79 different arms of the Singapore government—16 ministries, 58 statutory boards, and 5 other government offices. The publications comprise of 114 documents, 282 speeches, and 52 parliamentary QnAs.</p>
+                    <p>The Singapore government endeavours to make Artificial Intelligence (AI) a core national technology. Singaporeans will find AI increasingly interlacing in their everyday life. Yet, AI evoked is more than just a neutral technology, instead serving too as a socio-technical imaginary, a method to construct and promote certain possible urban futures.</p>
+                    <p>Hence, this project seeks to map out the concepts of AI evoked by the Singapore government, charting connections between disparate bodies of knowledge distributed across the governmental body's many arms.</p>
+                    <p>Such a semantic network will map out of the core concepts that emerge from a content analysis of 448 publications drawn from 79 different arms of the Singapore government—16 ministries, 58 statutory boards, and 5 other governmental offices. The collection comprises 114 documents, 282 speeches, and 52 parliamentary QnAs.</p>
                 </div>
                 <!-- <div class="authorship">
                     <h4>Authorship</h4>
