--- a/index.html
+++ b/index.html
@@ -1,29 +1,32 @@
 <html>
     <head>
         <title>IRP Thesis AI Governance Map</title>
-        <!-favicon -->
+
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <!-- favicon -->
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🧠</text></svg>">
         
-        <!-bootstrap -->
+        <!-- bootstrap -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <!-JavaScript Bundle with Popper -->
+        <!-- JavaScript Bundle with Popper -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-        <!-popper.js -->
+        <!-- popper.js -->
         <script src="https://unpkg.com/@popperjs/core@2" crossorigin="anonymous"></script>
 
-        <!-d3.js -->
+        <!-- d3.js -->
         <script src="https://d3js.org/d3.v6.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/2.25.6/d3-legend.min.js"></script>
 
-        <!-jquery -->
+        <!-- jquery -->
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
-        <!-chart.js -->
+        <!-- chart.js -->
         <script src="https://cdn.jsdelivr.net/npm/chart.js@3.5.0/dist/chart.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns@next/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
         <script src="js/chartjs-plugin-datalabels.min.js"></script>
 
-        <!-my scripts -->
+        <!-- my scripts -->
         <link href="main.css" rel="stylesheet">
         <script src="js/main.js"></script>
         <script src="js/graph.js"></script>
@@ -613,6 +616,8 @@
                 <div class="authorship">
                     <h4>Authorship</h4>
                     <p>Ivan Chuang. An Independent Research Project for the <a href="https://urbanscience.sutd.edu.sg/">MSc. in Urban Science, Policy and Planning</a>, Singapore University of Technology and Design. Supervised by <a href="https://www.sunsunlim.com/">Prof Lim Sun Sun</a>.</p>
+                    <hr>
+                    <br>
                 </div>
             </div>
         </div>
