--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                 </div>
             </div>
             <div id="titleHeader" class="title-header parent-container" style="bottom: 0; left: 20; width: max-content; padding: .5rem 1rem; border-bottom: white; border-radius: .25em .25em 0 0; cursor: pointer;">
-                <p>Singapore AI Governance Concept Map (2021) <span style="padding-left: .2rem;"><svg class="float-down" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-down" viewBox="0 0 16 16">
+                <p>Singapore AI Governance Conceptual Map (2021) <span style="padding-left: .2rem;"><svg class="float-down" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-down" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z"/>
                   </svg></span></p>
             </div>
@@ -258,7 +258,10 @@
             </div>
             <div class="content">
                 <div class="paragraph">
-                    <h3 id="introHeader">A Singapore AI Governance Concept Map</h3>
+                    <h3 id="introHeader">A Singapore AI Governance Conceptual Map</h3>
+                    <div class="nav">
+                      <span><a href="#data">About the data</a></span>&ensp;|&ensp;<span><a href="#authorship">Authorship</a></span>
+                    </div>
                     <p>The Singapore government endeavours to make Artificial Intelligence (AI) a core national technology. Singaporeans will find AI increasingly interlacing in their everyday life. Yet, AI evoked is more than just a neutral technology, serving too as a sociotechnical imaginary, a method to construct and promote certain possible urban futures.</p>
                     <p>The conceptual map above charts connections between disparate bodies of knowledge on AI governance across the Singapore government's many arms, making explicit the imaginary of the Singapore government. The map was constructed by extracting the co-occurrence of words from a corpus of text—white papers, fact sheets, speech transcripts, answers to parliamentary questions—published by the Singapore government around the topic of AI.</p>
                     <p>The multitude of systems—technological, material, and political—that make up AI in practice renders attempts of understanding the whole system a herculean task. Hence, instead of attempting to interpret the whole map, a partial account is offered by highlighting and interpreting significant concepts that have emerged from the conceptual map.</p>
@@ -547,7 +550,7 @@
                           </tr>
                         </tbody>
                     </table> 
-                    <p>Towards ensuring equal and sustained benefit, Minister-in-Charge of the Smart Nation Initiative Dr Balakrishnan has announced plans to create accessible digital infrastructure, and access to technical expertise and guidance through programmes such as the <cite>Chief Technology Officer-as-a-Service (CTOaaS) <a href="https://www.imda.gov.sg/programme-listing/smes-go-digital/CTOaaS">initiative</a></cite>, setting up the sociotechnical environment for AI to be prevalent in every aspect of urban life in Singapore.</p>
+                    <p>Towards ensuring equal and sustained benefit, Minister-in-Charge of the Smart Nation Initiative Dr Balakrishnan has announced plans to create accessible digital infrastructure, and access to technical expertise and guidance through programmes such as the <cite><a href="https://www.imda.gov.sg/programme-listing/smes-go-digital/CTOaaS">Chief Technology Officer-as-a-Service initiative</a> (CTOaaS)</cite>, setting up the sociotechnical environment for AI to be prevalent in every aspect of urban life in Singapore.</p>
                     <p>The theme of beneficence, that Singaporeans will ultimately benefit from AI-powered Singapore, is reflected often in the data to justify the various proposals and solutions that make up Singapore’s AI strategy. For example:</p>
                     <figure class="quote">
                         <blockquote>
@@ -572,7 +575,7 @@
                     <p>Singapore’s AI vision is not far off into the future, with most targets to be achieved by 2030. There is an urgency then to incorporate diverse perspectives and disciplines in order to understand the short and long-term effects of AI presence in Singapore’s social and economic institutions. Singaporeans should closely examine what does a future of AI mean for themselves personally, and challenge the government’s broad narrative.</p>
                     <hr>
                 </div>
-                <div class="paragraph">
+                <div class="paragraph" id="data">
                     <h4>About the data</h4>
                     <p>The data consists of 432 textual sources—comprising 106 documents, 271 speeches and 55 parliamentary Q&As—published by the Singapore government between 2014 to 2021, across 34 different government arms.</p>
                     <p>The Singapore government has been increasingly participating in AI governance discouse </p>
@@ -613,7 +616,7 @@
                     <hr>
                 </div>
 
-                <div class="authorship">
+                <div class="paragraph" id="authorship">
                     <h4>Authorship</h4>
                     <p>Ivan Chuang. An Independent Research Project for the <a href="https://urbanscience.sutd.edu.sg/">MSc. in Urban Science, Policy and Planning</a>, Singapore University of Technology and Design. Supervised by <a href="https://www.sunsunlim.com/">Prof Lim Sun Sun</a>.</p>
                     <hr>
