--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <html>
     <head>
-        <title>IRP Thesis AI Governance Map</title>
+        <title>🤖🕸 A Singapore AI Governance Conceptual Map</title>
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property='og:title' content='🤖🕸 A Singapore AI Governance Conceptual Map'/>
+        <meta property='og:image' content='https://vnck.xyz/assets/banner-default.jpg'/>
+        <meta property='og:description' content='An interactive visualisation of the conceptual map constructed from a content analysis of publications by the Singapore government on the topic of AI.'/>
+        <meta property='og:url' content='https://vnck.xyz/singapore-ai-governance-concept-map/'/>
 
         <!-- favicon -->
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🧠</text></svg>">
