--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
         <meta property='og:image' content='https://vnck.xyz/assets/banner-default.jpg'/>
         <meta property='og:description' content='An interactive visualisation of the conceptual map constructed from a content analysis of publications by the Singapore government on the topic of AI.'/>
         <meta property='og:url' content='https://vnck.xyz/singapore-ai-governance-concept-map/'/>
+        <meta name="twitter:site"    content="@vvvnck">
+        <meta name="twitter:creator" content="@vvvnck">
+        <meta name="twitter:title"   content="🤖🕸 A Singapore AI Governance Conceptual Map">
+        <meta name="twitter:description" content='An interactive visualisation of the conceptual map constructed from a content analysis of publications by the Singapore government on the topic of AI.'>
+        <meta name="twitter:card"  content="summary">
+        <meta name="twitter:image" content="https://vnck.xyz/singapore-ai-governance-concept-map/">
 
         <!-- favicon -->
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🧠</text></svg>">
